src/objects/Bill_Cycle_Date__c.object
<CustomObject>
    <description>Used for storing meter read date, month and year</description>
    <fields>
        <fullName>Bill_Cycle_Key__c</fullName>
        <formula>LDC_Vendor__r.Utility_Code__c &amp; &quot;_&quot; &amp; Text(Bill_Cycle__c) &amp; &quot;_&quot; &amp; Meter_Read_Month__c &amp; &quot;_&quot; &amp; Meter_Read_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Cycle Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to LDC Vendors</description>
        <label>LDC Vendor</label>
        <referenceTo>LDC_Vendor__c</referenceTo>
        <relationshipLabel>Bill Cycle Date</relationshipLabel>
        <relationshipName>Bill_Cycle_Date</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Date__c</fullName>
        <label>Meter Read Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Month__c</fullName>
        <label>Meter Read Month</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Read_Year__c</fullName>
        <label>Meter Read Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Bill Cycle Date</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <label>Cleveland Electric Illuminating Company</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company_2017</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>CEI Company 2017</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company_2018</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>CEI Company 2018</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company_2019</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>CEI Company 2019</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company_2020</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2020</value>
        </filters>
        <label>CEI Company 2020</label>
    </listViews>
    <listViews>
        <fullName>Cleveland_Electric_Illuminating_Company_2021</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Cleveland Electric Illuminating Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>CEI Company 2021</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <label>Columbus Southern Power Company</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2016</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Columbus Southern Power Company 2016</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2017</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>Columbus Southern Power Company 2017</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2018</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>Columbus Southern Power Company 2018</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2019</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>Columbus Southern Power Company 2019</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2020</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2020</value>
        </filters>
        <label>Columbus Southern Power Company 2020</label>
    </listViews>
    <listViews>
        <fullName>Columbus_Southern_Power_Company_2021</fullName>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Columbus Southern Power Company</value>
        </filters>
        <filters>
            <field>Meter_Read_Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>Columbus Southern Power Company 2021</label>
    </listViews>
    <listViews>
        <fullName>Dayton_Power_and_Light_Company</fullName>
        <columns>NAME</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Bill_Cycle__c</columns>
        <columns>Meter_Read_Date__c</columns>
        <columns>Meter_Read_Month__c</columns>
        <columns>Meter_Read_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Vendor__c</field>
            <operation>equals</operation>
            <value>Dayton Power and Light Company</value>
        </filters>
        <label>Dayton Power and Light Company</label>
    </listViews>
    <nameField>
        <displayFormat>BCD-{0000}</displayFormat>
        <label>Bill Cycle Date Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Cycle Date</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>